# no-future-bot

./: Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: author.rs  follow.rs  lib.rs  post.rs  post_media.rs  scheduled_post.rs  telegram_user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20221031_135359_create_schedule_and_follows.rs
src/: main.rs
src/models/: mod.rs  telegramauth.rs  twitterclient.rs
src/routes/: author.rs  catchers.rs  feed.rs  mod.rs  user.rs
src/workers/: mod.rs  posting.rs  twitter.rs
telegrambot/: Cargo.toml
telegrambot/src/: bot.rs  commands.rs  lib.rs
